Fix bouncing on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -26,6 +26,17 @@ body, html {
   padding: 0;
   width: 100%;
 }
+html{
+  margin:0;
+  padding:0;
+  overflow: hidden;
+}
+body{
+  position: absolute;
+  width:100%;
+  height:100%;
+  overflow: auto;
+}
 
 canvas {
   position: absolute;
